--- a/src/EmojiPicker/components/Footer/Footer.css
+++ b/src/EmojiPicker/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   height: 48px;
-  padding: 0 24px;
+  padding: 0 16px;
   background-color: #ffffff;
 }
 
