--- a/src/EmojiPicker/components/Search/Search.css
+++ b/src/EmojiPicker/components/Search/Search.css
@@ -1,4 +1,12 @@
 .search {
+  padding: 0 16px;
+}
+
+.search--hidden {
+  display: none;
+}
+
+.search__content {
   width: 100%;
   height: 40px;
   border-radius: 8px;
